--- a/pizza.html
+++ b/pizza.html
@@ -11,5 +11,21 @@
     <img src="imgs/pizza_pic" alt="Pizza made up of multiple slices of different flavored pizzas">
 <h2>Build your own pizza</h2>
 <p>Everbodies favorite meal can be personalized with whatever ingredients your heart desires! According to the Olsen twins, you can put literally anything you can imagine on top of this circular delight.</p>
+<h3>Ingredients</h3>
+<ul>
+    <li>Flour</li>
+    <li>Water</li>
+    <li>Salt</li>
+    <li>Tomato Sauce</li>
+    <li>Crack Cocaine</li>
+</ul>
+<h3>Steps</h3>
+<ol>
+    <li>Mix that shit up</li>
+    <li>Throw that bitch in the oven</li>
+    <li>Cook it</li>
+    <li>Eat it</li>
+</ol>
+
 </body>
 </html>
